# recoverability-modulus

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
experiments/: e1_verify_psi.py  e2_budget_curve.py  e3_sample_complexity.py  e4_cross_operator.py  e5_omni_dynamics.py
notes/: M1_prop1_recovery.md  M3_linear_picard.md  M4_clean_space_rate.md  M5_budget_decomposition.md  M6_omni_dynamics.md
results/: D2_caption.md  D3_caption.md  D5_caption.md  D8_caption.md
src/recmod/: __init__.py  budget.py  modulus.py  omni.py  operators.py  recover.py  theory.py
tests/: test_cross.py  test_modulus.py  test_omni.py  test_operators.py  test_recover.py  test_theory.py
