[project]
name = "recoverability-modulus"
version = "0.0.1"
description = "Recoverability modulus Psi_{T_r}: unifying SFBD deconvolution rates and SFBD-OMNI identifiability."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
